いろいろ修正

--- a/OneExam/Info.plist
+++ b/OneExam/Info.plist
@@ -46,5 +46,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleDisplayName</key>
+	<string>中国語1問1答</string>
 </dict>
 </plist>
