いろいろ修正

--- a/OneExam/Info.plist
+++ b/OneExam/Info.plist
@@ -47,6 +47,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>CFBundleDisplayName</key>
-	<string>中国語1問1答</string>
+	<string>シンプル中国語アプリ</string>
 </dict>
 </plist>
